# NexusSentinel

./: Cargo.toml  README.md
.github/workflows/: ci.yml  slsa-release.yml
checkpoints/: best_model.axonml  checkpoint_best.axonml  checkpoint_epoch_0020.axonml  checkpoint_epoch_0040.axonml  checkpoint_epoch_0060.axonml  checkpoint_epoch_0080.axonml  checkpoint_epoch_0100.axonml  checkpoint_epoch_0120.axonml  checkpoint_epoch_0140.axonml  checkpoint_epoch_0160.axonml  checkpoint_epoch_0180.axonml  checkpoint_epoch_0200.axonml
models/: sentinel.axonml  sentinel_weights.json
src/: config.rs  datagen.rs  lib.rs  sentinel.rs
