[package]
name = "nexus-sentinel"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "NexusSentinel — Facility Health Assessment for Edge Deployment"
authors = ["AutomataNexus Development Team"]
license = "MIT OR Apache-2.0"

[dependencies]
axonml-core = "0.4.3"
axonml-tensor = "0.4.3"
axonml-autograd = "0.4.3"
axonml-nn = "0.4.3"
axonml-optim = "0.4.3"
axonml-serialize = "0.4.3"
axonml = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"

[features]
default = []
cuda = ["axonml-core/cuda", "axonml-nn/cuda", "axonml-autograd/cuda"]

[[bin]]
name = "train"
path = "src/bin/train.rs"

[[bin]]
name = "export-weights"
path = "src/bin/export_weights.rs"

[[bin]]
name = "inference"
path = "src/bin/inference.rs"
